<resources>
    <string name="app_name">Project1</string>
    <string name="action_settings">Settings</string>
    <string name="patientName"></string>
    <string name="buttonRun">RUN</string>
    <string name="buttonStop">STOP</string>
    <string name="PatientAge">Age</string>
    <string name="PatientID">ID</string>
    <string name="PatientName">Patient Name</string>
    <string name="optionMale">Male</string>
    <string name="optionFemale">Female</string>
</resources>
